Add my vacancy route
